Fix navbar z-index

--- a/components/navbar/navbar.less
+++ b/components/navbar/navbar.less
@@ -17,7 +17,7 @@
         align-items: flex-end;
     }
     overflow: hidden;
-    z-index: 3;
+    z-index: 101;
     background-color: transparent;
     transition: all @nav-transition;
     .vertical-dock(@nav-align);
